@@ -32,8 +32,6 @@ TODO for cope runtime
 - a pattern Replicator
 - Global History / Undo facility for backoffice, that can undo deletes as well.
 - MySQL: warning, if row could exceed 8000 bytes limit
-- implement Comparable
-	* Item
 - implement Serializable
 	* items of non-bound types
 	* Type and Feature (for backoffice and live editor sessions)
